syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.greeter";
option java_outer_classname = "Greeter";
option objc_class_prefix = "HLW";

package greeter;
// import "google/api/annotations.proto"

// gRPC convention - Request & Reply, instead of Request &
// Response
service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayBye(ByeRequest) returns (ByeReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ByeRequest {
  string name = 1;
}

message ByeReply {
  string message = 1;
}
